--- a/resources/lang/am.json
+++ b/resources/lang/am.json
@@ -153,7 +153,10 @@
     "Register": "Գրանցվել",
     "Your message was sent successfully.": "Ձեր հայտը հաջողությամբ ուղարկվել է։",
     "Thank You!": "Շնորհակալություն",
-    "OK": "Լավ"
+    "OK": "Լավ",
+    "Projects":"Պրոյեկտներ",
+    "Blog":"Բլոգ",
+    "A company of Quality":"Որակի Ընկերություն"
     
 }
 
