--- a/resources/lang/am.json
+++ b/resources/lang/am.json
@@ -156,7 +156,7 @@
     "OK": "Լավ",
     "Projects":"Պրոյեկտներ",
     "Blog":"Բլոգ",
-    "A company of Quality":"Որակի Ընկերություն"
-    
+    "A Company Of Quality":"Որակի Ընկերություն",
+    "A Company Of":"Մի ընկերություն"
 }
 
