--- a/resources/lang/am.json
+++ b/resources/lang/am.json
@@ -2,7 +2,7 @@
     "About Us": "Մեր մասին",
     "Job": "Աշխատանք",
     "Courses": "Դասնընթացներ",
-    "Quality": "Սերվիս",
+    "Quality": "Ընկերություն",
     "Co-Workers": "Համագործակցություն",
     "Team": "թիմ",
     "Request Demo": "Կապը մեզ հետ",
@@ -157,6 +157,6 @@
     "Projects":"Պրոյեկտներ",
     "Blog":"Բլոգ",
     "A Company Of Quality":"Որակի Ընկերություն",
-    "A Company Of":"Մի ընկերություն"
+    "A Company Of":"Որակի"
 }
 
