--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -12,6 +12,7 @@
     "We are": "Мы",
     "highly-productive": "высокопродуктивная",
     "Tesvan": "Tesvan",
+    "Team": "Команда",
     "We are highly-productive quality assurance team that appreciates clean and elegant solutions to multifaceted real-world business problems.": "Мы высокопродуктивная команда по обеспечению качества, которая ценит чистые и элегантные решения многогранных реальных бизнес-проблем",
     "Learn More": "Узнать Больше",
     "Quality Assurance": "Quality Assurance",
