fix: ukraine translation

--- a/resources/lang/am.json
+++ b/resources/lang/am.json
@@ -41,6 +41,7 @@
     "We gather feedback, do the necessary tweaks, calibrate and move forward by increasing the best coverage.": " ",
     "Co-Workers ": "Համագործակցություն",
     "Our comapny cooperates qith both local and foreign customers.Our partners are spread all over the world.": "Մեր ընկերությունը համագործակցում է ինչպես տեղական, այնպես էլ արտասահմանյան պատվիրատուների հետ։ Մեր գործընկերները սփռված են աշխարհով մեկ",
+    "Ukraine": "Ուկրաինա",
     "Germany": "Գերմանիա",
     "France": "Ֆրանսիա",
     "USA": "ԱՄՆ",
@@ -85,7 +86,7 @@
     "Contacts ": "Կապը մեզ հետ",
     "Tesvan LLC, Sevan, Armenia": "Tesvan LLC, ք․ Սևան, ՀՀ",
     "Social Media": "Սոց. կայքեր",
-    
+
     "Join": "Միացիր",
     "Our": "մեր",
     "Talented": "մրցունակ",
