--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -41,6 +41,7 @@
     "We gather feedback, do the necessary tweaks, calibrate and move forward by increasing the best coverage.": "Мы собираем отзывы, делаем необходимые настройки, продвигаемся вперед, увеличивая тестовое покрытие.",
     "Co-Workers ": "Сотрудничество",
     "Our comapny cooperates qith both local and foreign customers.Our partners are spread all over the world.": "Наша компания сотрудничает как с местными, так и с зарубежными заказчиками. Наши партнеры разбросаны по всему миру",
+    "Ukraine": "Украина",
     "Germany": "Германия",
     "France": "Франция",
     "USA": "США",
@@ -85,7 +86,7 @@
     "Contacts ": "Контакы",
     "Tesvan LLC, Sevan, Armenia": "Tesvan LLC, Севан, Армения",
     "Social Media": "Соц. медиа",
-    
+
     "Join": "Присоединяйтесь",
     "Our": "к",
     "Talented": "нашей талантливой",
