--- a/resources/lang/am.json
+++ b/resources/lang/am.json
@@ -158,6 +158,8 @@
     "Projects":"Պրոյեկտներ",
     "Blog":"Բլոգ",
     "A Company Of Quality":"Որակի Ընկերություն",
-    "A Company Of":"Որակի"
+    "A Company Of":"Որակի",
+    "The page is still being translated": "Էջը դեռ թարգմանվում է",
+    "Go Back": "Վերադառնալ"
 }
 
