--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -159,5 +159,7 @@
     "Projects":"Проекты",
     "Blog":"Блог",
     "A Company Of Quality":"Компания Качества",
-    "A Company Of":"Компания"
+    "A Company Of":"Компания",
+    "The page is still being translated": "Страница все еще переводится",
+    "Go Back": "Вернитесь назад"
 }
