--- a/resources/lang/am.json
+++ b/resources/lang/am.json
@@ -161,6 +161,11 @@
     "A Company Of Quality":"Որակի Ընկերություն",
     "A Company Of":"Որակի",
     "The page is still being translated": "Էջը դեռ թարգմանվում է",
-    "Go Back": "Վերադառնալ"
+    "Go Back": "Վերադառնալ",
+    "Popular Posts": "Ամենաընթերցված",
+    "Recent Posts": "Վերջերս Հրատարակած",
+    "Load More": "Բեռնել Ավելին",
+    "Recent Articles": "Վերջերս Հրատարակած",
+    "Interesting For You": "Հետաքրքիր Ձեզ Համար"
 }
 
