--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -162,5 +162,10 @@
     "A Company Of Quality":"Компания Качества",
     "A Company Of":"Компания",
     "The page is still being translated": "Страница все еще переводится",
-    "Go Back": "Вернитесь назад"
+    "Go Back": "Вернитесь назад",
+    "Popular Posts": "Популярные Посты",
+    "Recent Posts": "Недавние Посты",
+    "Load More": "Загрузитъ Еще",
+    "Recent Articles": "Недавние Статъи",
+    "Interesting For You": "Интересно Для Вас"
 }
