fix: our services translations

--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -34,7 +34,7 @@
     "Drive Automation, integrate with CI/CD pipelines. Deploy and troubleshoot on local, staging environments to enable testing on all levels.": "Установка исправление ошибок в локальных промежуточных средах, чтобы обеспечить тестирование на всех уровнях",
     "We take into our hands and lead the development and implementation of Automated Testing to further enhance your product’s growth and shorten your deliver cycles.": "Мы берем в свои руки и руководим разработкой и автоматизированного тестирования для дальнейшего ускорения роста вашего продукта",
     "Understand product specifications and user psychology, develop wireframes and prototypes around customer needs. Implement attractive design finding creative ways to solve UX problems and following modern trends.": "Мы понимаем требования проекта, психологию пользователя и разрабатываем продукт, отвечающий требованиям заказчика",
-    "Here's the value we bring to the table": "Наши ценности",
+    "Here's the value we bring to the table": "Вот ценностъ мы привзносим к столу",
     "Our talented team is comprized of smart, collaborative people who think big, execute quickly and dont take themselves too seriously.": "Наша талантливая команда состоит из умных, способных к сотрудничеству людей, которые мыслят масштабно и работают быстро.",
     "We are commited to agile value delivery and solid engineering principles, as well as continuously improving our craft.": "Мы стремимся к гибкому предоставлению ценности и твердым инженерным принципам, а также постоянно совершенствуем наше мастерство.",
     "We are devoted to developing extensive quality test systems for small to large-scale companies to ensure the highest quality models and best customer experinece.": "Мы занимаемся разработкой обширных систем проверки качества для малых и крупных компаний, чтобы гарантировать высочайшее качество моделей и лучшие опыт работы с клиентами.",
@@ -167,5 +167,11 @@
     "Recent Posts": "Недавние Посты",
     "Load More": "Загрузитъ Еще",
     "Recent Articles": "Недавние Статъи",
-    "Interesting For You": "Интересно Для Вас"
+    "Interesting For You": "Интересно Для Вас",
+    "Quality is the heartbeat of any company. Having high-quality software you will be able to compete with the leaders of the industry and sooner or later YOU WILL LEAD them. We are here to help you on your way to success by providing you high-level quality assurance services.": "Качество - это сердцебиение любой компании. Имея качественное программное обеспечение, вы сможете составить конкуренцию лидерам отрасли и рано или поздно ВЫ БУДЕТЕ ЛИДИРОВАТЪ рынком. Мы здесь, чтобы помочь вам на пути к успеху, предоставляя вам услуги по обеспечению качества на высоком уровне.",
+    "As “A Company of Quality” we have a range of values we are faithful to:": "Как «Компания качества» у нас есть ряд ценностей, которым мы верны:",
+    "Quality: as our slogan suggests our main value offered is quality. And here in Tesvan, everything rolls around that.": "Качество: как гласит наш слоган, наша основная предлагаемая ценность - это качество. А здесь, в Тесване, все крутится вокруг этого.",
+    "Responsibility: We approach any issue with a strong sense of responsibility and do the work entrusted to us to the best of our ability.": "Ответственность: мы подходим к любому вопросу с чувством ответственности и выполняем порученную нам работу в меру своих возможностей.",
+    "Reliability: Trusting us you will gain the reliability and guarantee for your product and will perform confidently among your competitors.": "Надежность: Доверившись нам, вы получите надежность и гарантию на свой продукт и будете уверенно работать среди ваших конкурентов.",
+    "Growth: we grow continuously and never stop improving our skills and qualities to be more competent, to keep up with the times, and easily meet the expectations of our customers.": "Рост: мы постоянно растем и никогда не прекращаем совершенствовать свои навыки и качества, чтобы быть более компетентными, идти в ногу со временем и легко соответствовать ожиданиям наших клиентов."
 }
