--- a/resources/lang/am.json
+++ b/resources/lang/am.json
@@ -34,7 +34,7 @@
     "Drive Automation, integrate with CI/CD pipelines. Deploy and troubleshoot on local, staging environments to enable testing on all levels.": "Տեղադրում և սխալների ուղղում լոկալ միջանկյալ միջավայրերում՝ բոլոր մակարդակներում թեստավորումը հնարավոր դարձնելու համար",
     "We take into our hands and lead the development and implementation of Automated Testing to further enhance your product’s growth and shorten your deliver cycles.": "Մենք մեր ձեռքն ենք վերցնում և ղեկավարում ավտոմատացված թեստավորման մշակումը և իրականացումը՝ արագացնելով Ձեր արտադրանքի աճը։",
     "Understand product specifications and user psychology, develop wireframes and prototypes around customer needs. Implement attractive design finding creative ways to solve UX problems and following modern trends.": "Մենք հասկանում ենք նախագծի պահանջները, օգտագործողի հոգեբանությունը և նախագծում հաճախորդի պահանջներին համապատասխան պրոդուկտ։",
-    "Here's the value we bring to the table": "Ահա և մեր արժեքները",
+    "Here's the value we bring to the table": "Ի՞նչ արժեք ենք մենք ներկայացնում։",
     "Our talented team is comprized of smart, collaborative people who think big, execute quickly and dont take themselves too seriously.": "Մեր տաղանդավոր թիմը բաղկացած է խելացի, համագործակցող մասնագետներից, ովքեր ունեն ճկուն միտք և արագ կողմնորոշվելու ունակություն։",
     "We are commited to agile value delivery and solid engineering principles, as well as continuously improving our craft.": "Մենք հավատարիմ ենք agile մեթոդոլոգիային և ամուր ինժեներական սկզբունքներին, ինչպես նաև շարունակաբար կատարելագործոում ենք մեր հմտությունները։",
     "We are devoted to developing extensive quality test systems for small to large-scale companies to ensure the highest quality models and best customer experinece.": "Մենք զբաղվում ենք մեծ և փոքր կազմակերպությունների համար որակի թեստավորման ընդարձակ համակարգերի ստեղծմամբ, որպեսզի երաշխավորենք մոդելների և հաճախորդների սպասարկման բարձր որակը։",
@@ -166,6 +166,12 @@
     "Recent Posts": "Վերջերս Հրատարակած",
     "Load More": "Բեռնել Ավելին",
     "Recent Articles": "Վերջերս Հրատարակած",
-    "Interesting For You": "Հետաքրքիր Ձեզ Համար"
+    "Interesting For You": "Հետաքրքիր Ձեզ Համար",
+    "Quality is the heartbeat of any company. Having high-quality software you will be able to compete with the leaders of the industry and sooner or later YOU WILL LEAD them. We are here to help you on your way to success by providing you high-level quality assurance services.": "Որակը ցանկացած ընկերության սրտի զարկն է։ Ունենալով բարձրորակ ծրագրային ապահովում` դու կարող ես մրցել ոլորտի առաջատարների հետ և վաղ թե ուշ հենց դու՛ կառաջնորդես նրանց։ Մենք այստեղ ենք, որպեսզի օգնենք քեզ քո հաջողության ճանապարհին՝ առաջարկելով որակի ապահովման բարձրակարգ ծառայություններ։",
+    "As “A Company of Quality” we have a range of values we are faithful to:": "Որպես «Որակի ընկերություն» մենք ունենք մի շարք արժեքներ, որոնց հավատարիմ ենք՝",
+    "Quality: as our slogan suggests our main value offered is quality. And here in Tesvan, everything rolls around that.": "Որակ։ Ինչպես մեր կարգախոսն է հուշում, մեր ներկայացրած հիմնական արժեքը որակն է։ Այստեղ՝ Տեսվանում, ամեն բան պտտվում է որակի գաղափարի շուրջ։",
+    "Responsibility: We approach any issue with a strong sense of responsibility and do the work entrusted to us to the best of our ability.": "Պատասխանատվություն։ Մենք ցանկացած հարցի մոտենում ենք մեծ պատասխանատվությամբ և կատարում ենք մեզ վստահված ցանկացած աշխատանք՝ օգտագործելով մեր լավագույն կարողությունները։",
+    "Reliability: Trusting us you will gain the reliability and guarantee for your product and will perform confidently among your competitors.": "Հուսալիություն։ Վստահելով մեզ ՝ դու կստանաս հուսալիություն և երաշխիք քո պրոդուկտի համար, այդպիսով կկարողանաս վստահ հանդես գալ մրցակիցներիդ շրջանում:",
+    "Growth: we grow continuously and never stop improving our skills and qualities to be more competent, to keep up with the times, and easily meet the expectations of our customers.": "Աճ։ Մենք շարունակաբար աճում ենք․ երբեք չենք դադարում զարգացնել մեր հմտություններն ու գիտելիքները՝ ավելի կոմպետենտ դառնալու, ժամանակի հետ համահունչ քայլելու և հաճախորդների սպասելիքներն հեշտությամբ բավարարելու համար։"
 }
 
