fix: banner items translation

--- a/resources/lang/am.json
+++ b/resources/lang/am.json
@@ -15,13 +15,18 @@
     "Team ": "Թիմ",
     "We are highly-productive quality assurance team that appreciates clean and elegant solutions to multifaceted real-world business problems.": "Բարձր արդյունավետությամբ աշխատող որակի ապահովման մեր թիմը բազմակողմանի բիզնես խնդիրներին տալիս է որակյալ և ճշգրիտ լուծումներ",
     "Learn More": "Իմանալ ավելին",
-    "Quality Assurance": "Quality Assurance",
+    "Quality Assurance": "Որակի ապահովում",
+    "Developing extensive quality test systems for customers to ensure the highest quality models": "Հաճախորդների համար բարձրորակ փորձարկման համակարգերի մշակում՝՝ ամենաբարձր որակի մոդելներն ապահովելու համար",
     "We are devoted to developing extensive quality test systems for small to large-scale companies to ensure the highest quality models and best customer experinece": "Մենք ստեղծում ենք որակի թեստավորման համակարգեր Ձեր բիզնեսների համար՝ երաշխավորելով մատուցվող ծառայությունների բարձր որակը",
-    "Free Courses": "Free Courses",
+    "Free Courses": "Անվճար դասընթացներ",
+    "Free courses provide practical trainings giving opportunity to join our fast-growing team": "Անվճար դասընթացները տալիս են գործնական դասընթացներ, որոնք հնարավորություն են տալիս միանալու մեր արագ զարգացող թիմին",
     "Free courses provide practical training opportunities for the young generation of the region, as well as an opportunity to work in our fast-growing team": "Պրակտիկ ուսուցման հնարավորություն է ընձեռվում մարզի երիտասարդ սերնդին և տրամադրում աշխատելու հնարավորություն մեր արագ զարգացող թիմում",
+    "Job Provision": "Աշխատանքի տրամադրում",
+    "Providing an opportunity for beginners  with no work experience to join our team": "Աշխատանքային փորձ չունեցող սկսնակների համար մեր թիմին միանալու հնարավորություն ընձեռելը",
     "Job Opportunity": "Job Opportunity",
     "We provide an opportunity for beginners with no work experience to join our team and become experienced and lead IT specialists": "Մենք հնարավորություն ենք ընձեռում սկսնակ և աշխատանքային փորձ չունեցող մասնագետներին համալրել մեր թիմը և դառնալ ՏՏ ոլորտի առաջատար մասնագետներ",
-    "Volunteering": "Volunteering",
+    "Volunteering": "Կամավորական աշխատանք",
+    "Organizing social campaigns that light up the teamwork spirit in millennials": "Սոցիալական արշավների կազմակերպում, որոնք լուսավորում են երիտասարդների թիմային աշխատանքի ոգին",
     "Our team takes part in  volunteer work aimed at the conservation of nature, organizing campaigns which  develop the spirit of the team": "Մեր կամավարոկան աշխատանքները միտված են բնության պահպանմանը։ Կազմակերպվող արշավները զարգացնում են թիմային աշխատանքի ոգին ապագա սերնդում։",
     "Why Should You Hire Us ?": "Ինչու մենք",
     "You should hire us, because:\n* QUALITY is our number one priority and our ultimate goal\n* we are extremely customer-oriented and prioritize the needs of our clients over our business needs\n* we are young and motivated, ready to face any challenges\n* each of us is different and unique, but we share the ONE vision that unites us\n* we are passionate about our work, anything we do we do that with love and enthusiasm": "Ինչու՞ ընտրել հե՛նց մեզ։\nԴու պետք է ընտրես մեզ, քանի որ՝\n* Մեր համար մեկ աջանահերթությունն ու վերջնական նպատակը ՈՐԱԿՆ է։\n* Մենք ծայրաստիճան հաճախորդամետ ենք ` կենտրոնացած մեր հաճախորդների կարիքների վրա։\n* Մենք երիտասարդ ենք ու մոտիվացիայով լի՝ պատրաստ դիմակայելու ցանկացած մարտահրավերի:\n* Յուրաքանչյուրս տարբեր ենք ու յուրօրինակ, բայց ունենք միևնույն տեսլականը, որն էլ, հենց, միավորում է մեզ։\n* Մենք տարված ենք մեր գործով. այն ամենն ինչ անում ենք, անում ենք մեծագույն սիրով և էնտուզիազմով։",
