--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -15,20 +15,24 @@
     "Team ": "Команда",
     "We are highly-productive quality assurance team that appreciates clean and elegant solutions to multifaceted real-world business problems.": "Мы высокопродуктивная команда по обеспечению качества, которая ценит чистые и элегантные решения многогранных реальных бизнес-проблем",
     "Learn More": "Узнать Больше",
-    "Quality Assurance": "Quality Assurance",
+    "Quality Assurance": "Гарантия Качества",
+    "Developing extensive quality test systems for customers to ensure the highest quality models": "Разработка обширных систем тестирования качества для клиентов, чтобы гарантировать модели высочайшего качества.",
     "We are devoted to developing extensive quality test systems for small to large-scale companies to ensure the highest quality models and best customer experinece": "Создаем качественные системы тестирования для вашего бизнеса, гарантируя высокое качество предоставляемых услуг",
-    "Free Courses": "Бесплатные курсы",
+    "Free Courses": "Бесплатные Курсы",
+    "Free courses provide practical trainings giving opportunity to join our fast-growing team": "Бесплатные курсы представляют собой практические занятия, дающие возможность присоединиться к нашей быстрорастущей команде.",
     "Free courses provide practical training opportunities for the young generation of the region, as well as an opportunity to work in our fast-growing team": "Бесплатные курсы предоставляют возможность практического обучения, дают возможность работать в нашей команде",
+    "Job Provision": "Предоставление Работы",
+    "Providing an opportunity for beginners  with no work experience to join our team": "Предоставление возможности присоединиться к нашей команде новичкам без опыта работы",
     "Job Opportunity": "Job Opportunity",
     "We provide an opportunity for beginners with no work experience to join our team and become experienced and lead IT specialists": "Мы даем возможность новичкам без опыта работы присоединиться к нашей команде и стать ведущими специалистами",
-    "Volunteering": "Volunteering",
+    "Volunteering": "Волонтерство",
+    "Organizing social campaigns that light up the teamwork spirit in millennials": "Организация социальных кампаний, пробуждающих командный дух у миллениалов.",
     "Our team takes part in  volunteer work aimed at the conservation of nature, organizing campaigns which  develop the spirit of the team": "Наша волонтерская работа направлена ​​на сохранение природы. Кампании развивают дух совместной работы",
     "Why Should You Hire Us ?": "Почему мы ?",
     "You should hire us, because:\n* QUALITY is our number one priority and our ultimate goal\n* we are extremely customer-oriented and prioritize the needs of our clients over our business needs\n* we are young and motivated, ready to face any challenges\n* each of us is different and unique, but we share the ONE vision that unites us\n* we are passionate about our work, anything we do we do that with love and enthusiasm": "Вам следует нанять нас, потому что:\n* КАЧЕСТВО - наш приоритет номер один и наша конечная цель\n* мы чрезмерно ориентированы на клиента и ставим потребности наших клиентов выше потребностей нашего бизнеса\n* мы молоды и целеустремленны, готовы к любым вызовам\n* каждый из нас индивидуален и уникален, но мы разделяем ЕДИНОЕ видение, которое нас объединяет\n* мы увлечены своей работой, что бы мы ни делали, мы делаем это с любовью и энтузиазмом",
     "Tesvan promotes job creation for smart, capable young people by preventing them from emigrating to the capital city and abroad.": "Tesvan способствует созданию рабочих мест для умных, способных молодых людей, предотвращая их эмиграцию в столицу и за границу.",
     "Our activity started in 2019.It pursued one goal: to develop the IT sector in the regions, giving practical training opportunities to the young generation of the region. Our goal is to contribute to the development of the IT sector in the Gegharkunik region, particularly in Sevan and its surrounding areas, to support the increase of the efficiency of the activities of young people who want to work in the field.": "Наша деятельность началась в 2019 году. Она преследовала одну цель: развивать ИТ-сектор в регионах, давая возможность практического обучения молодому поколению региона.",
     "We will drive a new level of quality to your products and services by hunting down and reproducing the trickiest of bugs.We take the ownership of automating and streamlining the testing process for detecting issues, facilitating you to scale your products and features efficiently without sacrificing quality.": "Мы выведем на новый уровень качество ваших продуктов и услуг, выявляя и воспроизводя самые сложные ошибки. Мы берем на себя ответственность за автоматизацию и оптимизацию процесса тестирования для выявления проблем, помогая вам эффективно масштабировать свои продукты и функции.",
-    "Quality Assurance ": "Quality Assurance",
     "Our team is excited by the opportunity to set new standard of quality for your software on all levels of complexity": "Наша команда готова установить новый стандарт качества для программного обеспечения любой сложности",
     "Establish clear expectations of scope and timing of all testing deliverables with the team. Define, execute, and document manual tests, test data, and test results with necessary detail": "Проверим вручную и задокументируем необходимые детали тесты, их данные и результаты тестов",
     "Drive Automation, integrate with CI/CD pipelines. Deploy and troubleshoot on local, staging environments to enable testing on all levels.": "Установка исправление ошибок в локальных промежуточных средах, чтобы обеспечить тестирование на всех уровнях",
