--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -62,7 +62,7 @@
     "We are not only providing our service to global companies but also work for them within cross-team development on remote": "Мы не только предоставляем услуги глобальным компаниям, но и работаем для них в рамках кросс-командной разработки удаленно",
     "Customers": "Клиенты",
     "Over the last few years we have worked on a lot of products from USA, Belgium, Italy, UK, France, Netherlands, Germany, Russia, Ukraine, Australia": "Мы получаем заказы из таких стран, как США, Бельгия, Франция, Германия, Россия",
-    "Our Team": "Наша команда",
+    "Our Team": "Наша Команда",
     "Meet our talented team members who shine when it comes to what they do the best": "Вот наша целеустремленная, трудолюбивая команда, ищущая инновационные технологии",
     "Davit Grigoryan": "Давид Григорян",
     "Davit Kartashyan": "Давид Карташян",
@@ -183,5 +183,12 @@
     "Responsibility: We approach any issue with a strong sense of responsibility and do the work entrusted to us to the best of our ability.": "Ответственность: мы подходим к любому вопросу с чувством ответственности и выполняем порученную нам работу в меру своих возможностей.",
     "Reliability: Trusting us you will gain the reliability and guarantee for your product and will perform confidently among your competitors.": "Надежность: Доверившись нам, вы получите надежность и гарантию на свой продукт и будете уверенно работать среди ваших конкурентов.",
     "Growth: we grow continuously and never stop improving our skills and qualities to be more competent, to keep up with the times, and easily meet the expectations of our customers.": "Рост: мы постоянно растем и никогда не прекращаем совершенствовать свои навыки и качества, чтобы быть более компетентными, идти в ногу со временем и легко соответствовать ожиданиям наших клиентов.",
-    "See All": "Увидетъ Всех"
+    "See All": "Увидетъ Всех",
+    "Our Services": "Наши Услуги",
+    "Manual QA": "Ручной QA",
+    "Define, execute, and document manual tests, test data, and test results with necessary detail.": "Определяем, выполняем и документируем ручные тесты, тестовые данные и результаты тестов с необходимой детализацией.",
+    "Automation QA": "Автоматизация QA",
+    "Implement Automated Testing to enhance your product’s growth and shorten your deliver cycles.": "Внедряшм автоматическое тестирование, чтобы ускорить рост вашего продукта и сократить циклы доставки.",
+    "Drive automation, integration with CI/CD pipelines": "Способствуем автоматизации, интеграции с пайплайнами CI/CD",
+    "Understand product specifications, develop wireframes and prototypes around customer needs.": "Понимание спецификаций продукта, разработка макетов и прототипов в соответствии с потребностями клиентов."
 }
