fix: ru translation

--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -188,7 +188,7 @@
     "Manual QA": "Ручной QA",
     "Define, execute, and document manual tests, test data, and test results with necessary detail.": "Определяем, выполняем и документируем ручные тесты, тестовые данные и результаты тестов с необходимой детализацией.",
     "Automation QA": "Автоматизация QA",
-    "Implement Automated Testing to enhance your product’s growth and shorten your deliver cycles.": "Внедряшм автоматическое тестирование, чтобы ускорить рост вашего продукта и сократить циклы доставки.",
+    "Implement Automated Testing to enhance your product’s growth and shorten your deliver cycles.": "Внедряeм автоматическое тестирование, чтобы ускорить рост вашего продукта и сократить циклы доставки.",
     "Drive automation, integration with CI/CD pipelines": "Способствуем автоматизации, интеграции с пайплайнами CI/CD",
     "Understand product specifications, develop wireframes and prototypes around customer needs.": "Понимание спецификаций продукта, разработка макетов и прототипов в соответствии с потребностями клиентов."
 }
