fix: translation on education pages fix: resize image responsively feat: update CVs

--- a/resources/lang/am.json
+++ b/resources/lang/am.json
@@ -190,5 +190,9 @@
     "Automation QA": "Ավտոմատացված QA",
     "Implement Automated Testing to enhance your product’s growth and shorten your deliver cycles.": "Իրականացնում ենք ավտոմատացված փորձարկում ՝ ձեր արտադրանքի աճն արագացնելու և առաքման ցիկլերը կրճատելու համար:",
     "Drive automation, integration with CI/CD pipelines": "Խթանում ենք ավտոմատացումը, ինտեգրումը CI/CD փայփլայների հետ",
-    "Understand product specifications, develop wireframes and prototypes around customer needs.": "Ապրանքի բնութագրերի ըմբռնում, մակետների ու նախատիպեր մշակում՝ հաճախորդի կարիքների համապատասխան:"
+    "Understand product specifications, develop wireframes and prototypes around customer needs.": "Ապրանքի բնութագրերի ըմբռնում, մակետների ու նախատիպեր մշակում՝ հաճախորդի կարիքների համապատասխան:",
+    "View More": "Նայել Ավելին",
+    "Most Viewed": "Ամենաշատ Դիտված",
+    "Next Lessons": "Հաջորդ Դասերը",
+    "See More": "Տեսնել Ավելին"
 }
