--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -190,5 +190,9 @@
     "Automation QA": "Автоматизация QA",
     "Implement Automated Testing to enhance your product’s growth and shorten your deliver cycles.": "Внедряeм автоматическое тестирование, чтобы ускорить рост вашего продукта и сократить циклы доставки.",
     "Drive automation, integration with CI/CD pipelines": "Способствуем автоматизации, интеграции с пайплайнами CI/CD",
-    "Understand product specifications, develop wireframes and prototypes around customer needs.": "Понимание спецификаций продукта, разработка макетов и прототипов в соответствии с потребностями клиентов."
+    "Understand product specifications, develop wireframes and prototypes around customer needs.": "Понимание спецификаций продукта, разработка макетов и прототипов в соответствии с потребностями клиентов.",
+    "View More": "Смотреть Еще",
+    "Most Viewed": "Самые Просматриваемые",
+    "Next Lessons": "Следующие Уроки",
+    "See More": "Увидеть Больше"
 }
