feat: translate published on

--- a/resources/lang/am.json
+++ b/resources/lang/am.json
@@ -194,5 +194,7 @@
     "View More": "Նայել Ավելին",
     "Most Viewed": "Ամենաշատ Դիտված",
     "Next Lessons": "Հաջորդ Դասերը",
-    "See More": "Տեսնել Ավելին"
+    "See More": "Տեսնել Ավելին",
+    "Published on ": "Հրատարակված է ",
+    "Tesvan team": "Tesvan Թիմ"
 }
