--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -194,5 +194,7 @@
     "View More": "Смотреть Еще",
     "Most Viewed": "Самые Просматриваемые",
     "Next Lessons": "Следующие Уроки",
-    "See More": "Увидеть Больше"
+    "See More": "Увидеть Больше",
+    "Published on ": "Опубликошано: ",
+    "Tesvan team": "Команда Tesvan"
 }
