--- a/resources/lang/am.json
+++ b/resources/lang/am.json
@@ -1,7 +1,7 @@
 {
     "About Us": "Մեր մասին",
     "Job": "Աշխատանք",
-    "Courses": "Դասնընթացներ",
+    "Courses": "Դասընթացներ",
     "Quality": "Ընկերություն",
     "Co-Workers": "Համագործակցություն",
     "Team": "թիմ",
@@ -30,7 +30,7 @@
     "Our team takes part in  volunteer work aimed at the conservation of nature, organizing campaigns which  develop the spirit of the team": "Մեր կամավարոկան աշխատանքները միտված են բնության պահպանմանը։ Կազմակերպվող արշավները զարգացնում են թիմային աշխատանքի ոգին ապագա սերնդում։",
     "Why Should You Hire Us ?": "Ինչու՞ ընտրել հե՛նց մեզ։",
     "You should hire us, because:": "Դու պետք է ընտրես մեզ, քանի որ՝",
-    "QUALITY is our number one priority and our ultimate goal": "Մեր համար մեկ աջանահերթությունն ու վերջնական նպատակը ՈՐԱԿՆ է։",
+    "QUALITY is our number one priority and our ultimate goal": "Մեր համար մեկ առաջնահերթությունն ու վերջնական նպատակը ՈՐԱԿՆ է։",
     "We are extremely customer-oriented and prioritize the needs of our clients over our business needs": "Մենք ծայրաստիճան հաճախորդամետ ենք ` կենտրոնացած մեր հաճախորդների կարիքների վրա։",
     "We are young and motivated, ready to face any challenges": "Մենք երիտասարդ ենք ու մոտիվացիայով լի՝ պատրաստ դիմակայելու ցանկացած մարտահրավերի:",
     "We are passionate about our work, anything we do we do that with love and enthusiasm": "Յուրաքանչյուրս տարբեր ենք ու յուրօրինակ, բայց ունենք միևնույն տեսլականը, որն էլ, հենց, միավորում է մեզ։",
@@ -78,6 +78,23 @@
     "Anna Rudomyotkina": "Աննա Ռուդամյոտկինա",
     "Lilit Galstyan": "Լիլիթ Գալստյան",
     "Satenik Miraqyan": "Սաթենիկ Միրաքյան",
+    "Armen Simonyan" : "Արմեն Սիմոնյան",
+    "Lena Hambardzumyan" : "Լենա Համբարձումյան",
+    "Hasmik Hovhannisayan" : "Հասմիկ Հովհաննիսյան",
+    "Ara Galsatyan" : "Հիմա Գալսաթյանը",
+    "Ani Vardanyan" : "Անի Վարդանյան",
+    "Shogher Galstyan" : "Շողեր Գալստյան",
+    "Nina Antonyan" : "Նինա Անտոնյան",
+    "Arman Poghosyan" : "Արման Պողոսյան",
+    "Norayr Hakobyan" : "Նորայր Հակոբյան",
+    "Levon Galstyan" : "Լեւոն Գալստյան",
+    "Mane Shahbazyan" : "Շահբազիայից",
+    "Vanuhi Melikyan" : "Վանուհի Մելիքյան",
+    "Mari Baghdasaryan" : "Եկեք Բաղդասարյանին",
+    "Mariam Martirosyan" : "Մերի Մարտիրոսյան",
+    "Armenak Shakaryan" : "Արմենակ Շաքարյան",
+    "Armen Simonyan" : "Արմեն Սիմոնյան",
+    "Davit Ohanyan" : "Դավիթ Օխանյան",
     "Testiomanials": "Հայացք հեռվից",
     "This is where testimonials will go once awesome clients like you write them!": "Մեր ձեռքբերումներից մեկն այն է, որ պատվիրատուները գոհ են մնում մեր կատարած աշխատանքից և դառնում են մշտական գործընկերներ",
     "Contact Us": "Կապը մեզ հետ",
