--- a/resources/lang/am.json
+++ b/resources/lang/am.json
@@ -81,17 +81,16 @@
     "Armen Simonyan" : "Արմեն Սիմոնյան",
     "Lena Hambardzumyan" : "Լենա Համբարձումյան",
     "Hasmik Hovhannisayan" : "Հասմիկ Հովհաննիսյան",
-    "Ara Galsatyan" : "Հիմա Գալսաթյանը",
     "Ani Vardanyan" : "Անի Վարդանյան",
     "Shogher Galstyan" : "Շողեր Գալստյան",
     "Nina Antonyan" : "Նինա Անտոնյան",
     "Arman Poghosyan" : "Արման Պողոսյան",
     "Norayr Hakobyan" : "Նորայր Հակոբյան",
     "Levon Galstyan" : "Լեւոն Գալստյան",
-    "Mane Shahbazyan" : "Շահբազիայից",
+    "Mane Shahbazyan" : "Մանե Շահբազյան",
     "Vanuhi Melikyan" : "Վանուհի Մելիքյան",
-    "Mari Baghdasaryan" : "Եկեք Բաղդասարյանին",
-    "Mariam Martirosyan" : "Մերի Մարտիրոսյան",
+    "Mari Baghdasaryan" : "Մարի Բաղդասարյան",
+    "Mariam Martirosyan" : "Մարիամ Մարտիրոսյան",
     "Armenak Shakaryan" : "Արմենակ Շաքարյան",
     "Armen Simonyan" : "Արմեն Սիմոնյան",
     "Davit Ohanyan" : "Դավիթ Օխանյան",
