--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -76,7 +76,22 @@
     "Lusine Hovhannisyan": "Лусине Оганесян",
     "Anna Rudomyotkina": "Анна Рудометкина",
     "Lilit Galstyan": "Лилит Галстян",
-    "Satenik Miraqyan": "Сатеник Миракян",
+    "Satenik Miraqyan":"Сатеник Миракян",
+    "Lena Hambardzumyan":"Лена Амбарцумян",
+    "Hasmik Hovhannisayan":"Асмик Оганесян",
+    "Nina Antonyan":"Нина Антонян",
+    "Ani Vardanyan":"Ани Варданян",
+    "Shogher Galstyan":"Шогер Галстян",
+    "Arman Poghosyan":"Арман Погосян",
+    "Norayr Hakobyan":"Норайр Акопян",
+    "Levon Galstyan":"Левон Галстян",
+    "Mane Shahbazyan":"Мане Шахбазян",
+    "Vanuhi Melikyan":"Вануи Меликян",
+    "Mari Baghdasaryan":"Мари Багдасарян",
+    "Mariam Martirosyan":"Мариам Мартиросян", 
+    "Davit Ohanyan":"Давид Оганян",
+    "Armenak Shakaryan":"Арменак Шакарян",
+    "Armen Simonyan":"Արմեն Սիմոնյան",
     "Testiomanials": "Отзывы",
     "This is where testimonials will go once awesome clients like you write them!": "Вот куда пойдут отзывы, когда их напишут такие замечательные клиенты, как вы!",
     "Contact Us": "Связаться с нами",
