--- a/resources/lang/am.json
+++ b/resources/lang/am.json
@@ -93,7 +93,7 @@
     "Mariam Martirosyan" : "Մարիամ Մարտիրոսյան",
     "Armenak Shakaryan" : "Արմենակ Շաքարյան",
     "Armen Simonyan" : "Արմեն Սիմոնյան",
-    "Davit Ohanyan" : "Դավիթ Օխանյան",
+    "Davit Ohanyan" : "Դավիթ Օհանյան",
     "Testiomanials": "Հայացք հեռվից",
     "This is where testimonials will go once awesome clients like you write them!": "Մեր ձեռքբերումներից մեկն այն է, որ պատվիրատուները գոհ են մնում մեր կատարած աշխատանքից և դառնում են մշտական գործընկերներ",
     "Contact Us": "Կապը մեզ հետ",
