--- a/resources/lang/am.json
+++ b/resources/lang/am.json
@@ -16,17 +16,17 @@
     "We are highly-productive quality assurance team that appreciates clean and elegant solutions to multifaceted real-world business problems.": "Բարձր արդյունավետությամբ աշխատող որակի ապահովման մեր թիմը բազմակողմանի բիզնես խնդիրներին տալիս է որակյալ և ճշգրիտ լուծումներ",
     "Learn More": "Իմանալ ավելին",
     "Quality Assurance": "Որակի ապահովում",
-    "Developing extensive quality test systems for customers to ensure the highest quality models": "Հաճախորդների համար բարձրորակ փորձարկման համակարգերի մշակում՝՝ ամենաբարձր որակի մոդելներն ապահովելու համար",
+    "Developing extensive quality test systems for customers to ensure the highest quality models": "Բարձր Որակի թեստավորման համակարգեր Ձեր բիզնեսների համար",
     "We are devoted to developing extensive quality test systems for small to large-scale companies to ensure the highest quality models and best customer experinece": "Մենք ստեղծում ենք որակի թեստավորման համակարգեր Ձեր բիզնեսների համար՝ երաշխավորելով մատուցվող ծառայությունների բարձր որակը",
     "Free Courses": "Անվճար դասընթացներ",
-    "Free courses provide practical trainings giving opportunity to join our fast-growing team": "Անվճար դասընթացները տալիս են գործնական դասընթացներ, որոնք հնարավորություն են տալիս միանալու մեր արագ զարգացող թիմին",
+    "Free courses provide practical trainings giving opportunity to join our fast-growing team": "Անվճար գործնական ուսուցման և մեր թիմին միանալու հնարավորություն",
     "Free courses provide practical training opportunities for the young generation of the region, as well as an opportunity to work in our fast-growing team": "Պրակտիկ ուսուցման հնարավորություն է ընձեռվում մարզի երիտասարդ սերնդին և տրամադրում աշխատելու հնարավորություն մեր արագ զարգացող թիմում",
     "Job Provision": "Աշխատանքի տրամադրում",
-    "Providing an opportunity for beginners  with no work experience to join our team": "Աշխատանքային փորձ չունեցող սկսնակների համար մեր թիմին միանալու հնարավորություն ընձեռելը",
+    "Providing an opportunity for beginners  with no work experience to join our team": "Աշխատանքային փորձ չունեցող սկսնակների համար մեր թիմին միանալու հնարավորություն",
     "Job Opportunity": "Job Opportunity",
     "We provide an opportunity for beginners with no work experience to join our team and become experienced and lead IT specialists": "Մենք հնարավորություն ենք ընձեռում սկսնակ և աշխատանքային փորձ չունեցող մասնագետներին համալրել մեր թիմը և դառնալ ՏՏ ոլորտի առաջատար մասնագետներ",
-    "Volunteering": "Կամավորական աշխատանք",
-    "Organizing social campaigns that light up the teamwork spirit in millennials": "Սոցիալական արշավների կազմակերպում, որոնք լուսավորում են երիտասարդների թիմային աշխատանքի ոգին",
+    "Volunteering": "Կամավորություն",
+    "Organizing social campaigns that light up the teamwork spirit in millennials": "Արշավները զարգացնում են թիմային աշխատանքի ոգին ապագա սերնդում։",
     "Our team takes part in  volunteer work aimed at the conservation of nature, organizing campaigns which  develop the spirit of the team": "Մեր կամավարոկան աշխատանքները միտված են բնության պահպանմանը։ Կազմակերպվող արշավները զարգացնում են թիմային աշխատանքի ոգին ապագա սերնդում։",
     "Why Should You Hire Us ?": "Ինչու՞ ընտրել հե՛նց մեզ։",
     "You should hire us, because:": "Դու պետք է ընտրես մեզ, քանի որ՝",
