--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -91,7 +91,7 @@
     "Mariam Martirosyan":"Мариам Мартиросян", 
     "Davit Ohanyan":"Давид Оганян",
     "Armenak Shakaryan":"Арменак Шакарян",
-    "Armen Simonyan":"Арменак Симонян",
+    "Armen Simonyan":"Армен Симонян",
     "Testiomanials": "Отзывы",
     "This is where testimonials will go once awesome clients like you write them!": "Вот куда пойдут отзывы, когда их напишут такие замечательные клиенты, как вы!",
     "Contact Us": "Связаться с нами",
