--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -211,5 +211,14 @@
     "Next Lessons": "Следующие Уроки",
     "See More": "Увидеть Больше",
     "Published on ": "Опубликошано: ",
-    "Tesvan team": "Команда Tesvan"
+    "Tesvan team": "Команда Tesvan",
+    "Show More":"Показать больше",
+    "Project Overview":"Обзор проекта",
+    "Challenge":"Вызов",
+    "Our Solution":"Наше решение",
+    "Technology We Used":"Используемые нами технологии",
+    "Client Feedback":"Отзыв клиента",
+    "Other Cases":"Другие проекты",
+    "Objectives":"Цели",
+    "Results":"Результаты"
 }
