--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -210,7 +210,7 @@
     "Most Viewed": "Самые Просматриваемые",
     "Next Lessons": "Следующие Уроки",
     "See More": "Увидеть Больше",
-    "Published on ": "Опубликошано: ",
+    "Published on ": "Опубликовано: ",
     "Tesvan team": "Команда Tesvan",
     "Show More":"Показать больше",
     "Project Overview":"Обзор проекта",
